ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Paciente:'", "','", "'Diagnostico:'", 
                     "'Expede:'", "'Caduce:'", "'Medicamento:'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PALABRAS", "INT", "CONCENTRACION", "FECHA", "WS" ]

    RULE_prog = 0
    RULE_datosPacienteSentence = 1
    RULE_diagnosticoSentence = 2
    RULE_fechasSentence = 3
    RULE_medicamentoSentence = 4

    ruleNames =  [ "prog", "datosPacienteSentence", "diagnosticoSentence", 
                   "fechasSentence", "medicamentoSentence" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    PALABRAS=8
    INT=9
    CONCENTRACION=10
    FECHA=11
    WS=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datosPacienteSentence(self):
            return self.getTypedRuleContext(ExprParser.DatosPacienteSentenceContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def diagnosticoSentence(self):
            return self.getTypedRuleContext(ExprParser.DiagnosticoSentenceContext,0)


        def medicamentoSentence(self):
            return self.getTypedRuleContext(ExprParser.MedicamentoSentenceContext,0)


        def fechasSentence(self):
            return self.getTypedRuleContext(ExprParser.FechasSentenceContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ExprParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.state = 22
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 10
                self.datosPacienteSentence()
                self.state = 11
                self.match(ExprParser.EOF)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 13
                self.diagnosticoSentence()
                self.state = 14
                self.match(ExprParser.EOF)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 16
                self.medicamentoSentence()
                self.state = 17
                self.match(ExprParser.EOF)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 19
                self.fechasSentence()
                self.state = 20
                self.match(ExprParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatosPacienteSentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PALABRAS(self):
            return self.getToken(ExprParser.PALABRAS, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.INT)
            else:
                return self.getToken(ExprParser.INT, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.WS)
            else:
                return self.getToken(ExprParser.WS, i)

        def getRuleIndex(self):
            return ExprParser.RULE_datosPacienteSentence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatosPacienteSentence" ):
                listener.enterDatosPacienteSentence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatosPacienteSentence" ):
                listener.exitDatosPacienteSentence(self)




    def datosPacienteSentence(self):

        localctx = ExprParser.DatosPacienteSentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_datosPacienteSentence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(ExprParser.T__0)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 25
                self.match(ExprParser.WS)
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31
            self.match(ExprParser.PALABRAS)
            self.state = 32
            self.match(ExprParser.T__1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 33
                self.match(ExprParser.WS)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(ExprParser.INT)
            self.state = 40
            self.match(ExprParser.INT)
            self.state = 41
            self.match(ExprParser.INT)
            self.state = 42
            self.match(ExprParser.INT)
            self.state = 43
            self.match(ExprParser.INT)
            self.state = 44
            self.match(ExprParser.INT)
            self.state = 45
            self.match(ExprParser.INT)
            self.state = 46
            self.match(ExprParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiagnosticoSentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PALABRAS(self):
            return self.getToken(ExprParser.PALABRAS, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.WS)
            else:
                return self.getToken(ExprParser.WS, i)

        def getRuleIndex(self):
            return ExprParser.RULE_diagnosticoSentence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagnosticoSentence" ):
                listener.enterDiagnosticoSentence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagnosticoSentence" ):
                listener.exitDiagnosticoSentence(self)




    def diagnosticoSentence(self):

        localctx = ExprParser.DiagnosticoSentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_diagnosticoSentence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(ExprParser.T__2)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 49
                self.match(ExprParser.WS)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.match(ExprParser.PALABRAS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FechasSentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FECHA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.FECHA)
            else:
                return self.getToken(ExprParser.FECHA, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.WS)
            else:
                return self.getToken(ExprParser.WS, i)

        def getRuleIndex(self):
            return ExprParser.RULE_fechasSentence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFechasSentence" ):
                listener.enterFechasSentence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFechasSentence" ):
                listener.exitFechasSentence(self)




    def fechasSentence(self):

        localctx = ExprParser.FechasSentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fechasSentence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(ExprParser.T__3)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 58
                self.match(ExprParser.WS)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(ExprParser.FECHA)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 65
                self.match(ExprParser.WS)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(ExprParser.T__4)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 72
                self.match(ExprParser.WS)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(ExprParser.FECHA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MedicamentoSentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PALABRAS(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.PALABRAS)
            else:
                return self.getToken(ExprParser.PALABRAS, i)

        def CONCENTRACION(self):
            return self.getToken(ExprParser.CONCENTRACION, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.WS)
            else:
                return self.getToken(ExprParser.WS, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.INT)
            else:
                return self.getToken(ExprParser.INT, i)

        def getRuleIndex(self):
            return ExprParser.RULE_medicamentoSentence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMedicamentoSentence" ):
                listener.enterMedicamentoSentence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMedicamentoSentence" ):
                listener.exitMedicamentoSentence(self)




    def medicamentoSentence(self):

        localctx = ExprParser.MedicamentoSentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_medicamentoSentence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(ExprParser.T__5)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 81
                self.match(ExprParser.WS)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(ExprParser.PALABRAS)
            self.state = 88
            self.match(ExprParser.T__1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 89
                self.match(ExprParser.WS)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(ExprParser.CONCENTRACION)
            self.state = 96
            self.match(ExprParser.T__1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 97
                self.match(ExprParser.WS)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(ExprParser.PALABRAS)
            self.state = 104
            self.match(ExprParser.T__1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 105
                self.match(ExprParser.WS)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(ExprParser.PALABRAS)
            self.state = 112
            self.match(ExprParser.T__1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 113
                self.match(ExprParser.WS)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.match(ExprParser.INT)
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9):
                    break

            self.state = 124
            self.match(ExprParser.T__1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 125
                self.match(ExprParser.WS)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(ExprParser.PALABRAS)
            self.state = 132
            self.match(ExprParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





